--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ h1,h2,h3,h4,h5,h6{
       #hero {
         width: 100%;
         height: 100vh;
-        background: url(media/mural5.png) top center;
+        background: url(media/bookMural.png) top center;
         background-size: cover;
         position: relative;
       }
