--- a/auth/logIn/passwordReset.css
+++ b/auth/logIn/passwordReset.css
@@ -1,3 +1,12 @@
+  html, body{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    }
+
+
+
     #mainNav {
       background-color: rgba(14, 84, 127);
     }
@@ -24,29 +33,70 @@
 
     #mainNav .navbar-nav .nav-item .nav-link {
       font-size: 90%;
+      font-weight: 400;
+      padding: 0.75em 0;
+      letter-spacing: 1px;
       color: white;
       font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
     }
+
+    #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
+      color: #40ABF3;
+    }
+
+    @media (min-width: 992px) {
+      #mainNav {
+        padding-top: 25px;
+        padding-bottom: 25px;
+        -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
+        transition: padding-top 0.3s, padding-bottom 0.3s;
+        border: none;
+        background-color: transparent;
+      }
+      #mainNav .navbar-brand {
+        font-size: 1.75em;
+        -webkit-transition: all 0.3s;
+        transition: all 0.3s;
+      }
+      #mainNav .navbar-nav .nav-item .nav-link {
+        padding: 1.1em 1em !important;
+      }
+      #mainNav.navbar-shrink {
+        padding-top: 0;
+        padding-bottom: 0;
+        background-color: #325396;
+      }
+      #mainNav.navbar-shrink .navbar-brand {
+        font-size: 1.25em;
+        padding: 12px 0;
+      }
+    }
+
 
     .btn {
       font-size: 15px !important;
       text-transform: none !important;
     }
 
-  #container{
-    font-family: 'Open Sans';
-    width: 500px;
-    margin: auto;
-    margin-top: 30vh;
-  }
-
+  .vertical-center{
+    font-family: 'Open Sans', arial;
+    min-height:100%;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
   .form-group{
     width: 300px;
   }
 
 
   #footer {
-    background: rgba(14, 84, 127);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+
+    background: #325396;
     padding: 30px 0;
     color: #fff;
     font-size: 14px;
@@ -61,4 +111,9 @@
     text-align: center;
     font-size: 13px;
     color: #ccc;
+  }
+
+  .openSans{
+    font-family: 'Open Sans', arial;
+    font-weight: 400;
   }
