--- a/auth/welcome.css
+++ b/auth/welcome.css
@@ -1,7 +1,7 @@
 #hero {
     width: 100%;
     height: 100vh;
-    background: url(../media/mural5.png) top center;
+    background: url(../media/bookMural.png) top center;
     background-size: cover;
     position: relative;
   }
@@ -37,10 +37,9 @@
 
   #hero h1 {
     margin: 30px 0 10px 0;
-    font-size: 48px;
+    font-size: 4rem;
     font-weight: 700;
-    line-height: 56px;
-    text-transform: uppercase;
+    line-height: 5rem;
     color: #fff;
     font-family: 'Open Sans';
   }
@@ -77,7 +76,6 @@
 
 #hero .btn-get-started {
     font-family: "Poppins", sans-serif;
-    text-transform: uppercase;
     font-weight: 500;
     font-size: 16px;
     letter-spacing: 1px;
