--- a/home/css/sb-admin-2.css
+++ b/home/css/sb-admin-2.css
@@ -9667,9 +9667,11 @@ a:focus {
 }
 
 .bg-gradient-primary {
-  background-color: #4e73df;
+background: rgb(16,150,240);
+background: linear-gradient(180deg, rgba(16,150,240,1) 30%, rgba(64,171,243,1) 100%);
+  /*background-color: #4e73df;
   background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
-  background-size: cover;
+  background-size: cover;*/
 }
 
 .bg-gradient-secondary {
