--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
     text-transform:uppercase
 }
 h1,h2,h3,h4,h5,h6{
-    font-weight:700
+    font-weight:500;
 }
 .text-faded{color:rgba(255,255,255,.7)
     }
