--- a/home/profile/profile.css
+++ b/home/profile/profile.css
@@ -1,3 +1,10 @@
+.openSans400{
+  font-family: 'Open Sans' !important;
+}
+
+.poppins{
+  font-family: 'Poppins' !important;
+}
 
 .signup-w3ls {
     width: 50%;
@@ -42,7 +49,7 @@ input#image,input#store_name, input#store_type,input#owner_type, input#website,i
     -webkit-border-radius:30px;
     -moz-border-radius:30px;
     -o-border-radius:30px;
-    -ms-border-radius:30px; 
+    -ms-border-radius:30px;
 }
 input#image:focus,input#store_name:focus, input#store_type:focus,input#owner_type:focus, input#website:focus,input#contact_number:focus,input#contact_email:focus  {
     background-color:#f5f8fa !important;
@@ -50,15 +57,15 @@ input#image:focus,input#store_name:focus, input#store_type:focus,input#owner_typ
 }
 input::-webkit-input-placeholder {
 color: grey;
-} 
+}
 input:-moz-placeholder { /* Firefox 18- */
-color: grey;  
-} 
+color: grey;
+}
 input::-moz-placeholder {  /* Firefox 19+ */
-color: grey;  
-} 
-input:-ms-input-placeholder {  
-color: grey;  
+color: grey;
+}
+input:-ms-input-placeholder {
+color: grey;
 }
 .register {
     background-color: lightgreen;
@@ -82,7 +89,7 @@ color: grey;
     -o-border-radius: 30px;
     -ms-border-radius: 30px;
     font-family: 'Muli', sans-serif;
-}   
+}
 .register:hover {
     background-color:#36b051;
     color:#fff;
@@ -90,12 +97,33 @@ color: grey;
 
 
 #profile-container {
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     overflow: hidden;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-    border-radius: 50%;
 }
+
+
+    #imageUpload{
+      display: none;
+    }
+
+    #profileImage{
+      cursor: pointer;
+    }
+
+
+ .as-console-wrapper { position: fixed; bottom: 0; left: 0; right: 0; max-height: 150px; overflow-y: scroll; overflow-x: hidden; border-top: 1px solid #000; display: none; }
+.as-console { background: #e9e9e9; border: 1px solid #ccc; display: table; width: 100%; border-collapse: collapse; }
+.as-console-row { display: table-row; font-family: monospace; font-size: 13px; }
+.as-console-row:after { display: table-cell; padding: 3px 6px; color: rgba(0,0,0,.35); border: 1px solid #ccc; content: attr(data-date); vertical-align: top; }
+.as-console-row + .as-console-row > * { border: 1px solid #ccc; }
+.as-console-row-code { width: 100%; white-space: pre-wrap; padding: 3px 5px; display: table-cell; font-family: monospace; font-size: 13px; vertical-align: middle; }
+.as-console-error:before { content: 'Error: '; color: #f00; }
+.as-console-assert:before { content: 'Assertion failed: '; color: #f00; }
+.as-console-info:before { content: 'Info: '; color: #00f; }
+.as-console-warning:before { content: 'Warning: '; color: #e90 }
+@-webkit-keyframes flash { 0% { background: rgba(255,240,0,.25); } 100% { background: none; } }
+@-moz-keyframes flash { 0% { background: rgba(255,240,0,.25); } 100% { background: none; } }
+@-ms-keyframes flash { 0% { background: rgba(255,240,0,.25); } 100% { background: none; } }
+@keyframes flash { 0% { background: rgba(255,240,0,.25); } 100% { background: none; } }
+.as-console-row-code, .as-console-row:after { -webkit-animation: flash 1s; -moz-animation: flash 1s; -ms-animation: flash 1s; animation: flash 1s; }
