--- a/home/home.css
+++ b/home/home.css
@@ -1,22 +1,19 @@
 
-.rectangle {
-  height: 225px;
-  width: 160px;
-  background-color: rgb(204, 204, 204);
-}
-
-.CardContainer{
-  background-color: #f8f9fc;
-  border: none;
-  height: 225px;
-  margin: 12px;
-}
-
 .bookCard{
   width: 160px;
   height: 225px;
   text-align: center;
   font-size: 1.1rem;
+}
+
+.prev{
+  text-align: center;
+  cursor: pointer;
+}
+
+.next{
+  text-align: center;
+  cursor: pointer;
 }
 
 .openSans400{
