--- a/friders/friders.css
+++ b/friders/friders.css
@@ -15,19 +15,9 @@
 }
 
 
-.search-icon{
-  width: 24px;
-  height: 24px;
-  background: url(/media/search.svg) no-repeat;
-  content: ' ';
-  position: absolute;
-  left: 5px;
-  cursor: pointer;
-}
-
 #search {
 
-  position: relative;
+  background: url(/media/search.svg) no-repeat 10px 6px;
   border: 2px solid #40ABF3;
   font: 14px 'Open Sans';
   width: 250px;
@@ -51,11 +41,16 @@
 
 #search:focus-within{
     width: 300px;
+    background: url(/media/arrow-right.svg) no-repeat 10px 6px;
 }
 
 .img-frider{
   height: 3.125rem;
   width: 3.125rem;
+}
+
+.f-icon, .dropdownUser{
+  cursor: pointer;
 }
 
 /*@media only screen and (max-width: 575px){
